# tt-micropython-firmware

./: .gitignore  .gitmodules  README.md  config.md  diagram.json  pyproject.toml  wokwi.toml
.github/workflows/: release.yml
src/: config.ini  first_boot.ini  ho.json  main.py  shuttle_index.json  test.py  yo.py
src/examples/: README.md  neptune.py
src/examples/basic/: __init__.py  tb.py
src/examples/psychogenic_neptune/: __init__.py  psychogenic_neptune.py
src/examples/tt_um_factory_test/: __init__.py  tt_um_factory_test.py
src/examples/tt_um_psychogenic_neptune/: __init__.py
src/examples/tt_um_psychogenic_neptuneproportional/: __init__.py  tb.py  tt_um_psychogenic_neptuneproportional.py
src/examples/tt_um_psychogenic_shaman/: __init__.py  hardcoded.py  message.py  shaman.py  tb.py  util.py
src/examples/tt_um_rejunity_sn76489/: __init__.py  tt_um_rejunity_sn76489.py
src/examples/tt_um_rgbled_decoder/: __init__.py  tt_um_rgbled_decoder.py
src/shuttles/: tt04.json  tt05.json
src/tests/: counter_read.py  counter_speed.py  dffram.py  sram.py  test_anton.py
src/ttboard/: __init__.py  demoboard.py  globals.py  log.py  logging.py  mode.py  project_design.py  project_mux.py
src/ttboard/boot/: demoboard_detect.py  first.py  firstboot_operations.py  post.py  rom.py  shuttle_properties.py
src/ttboard/cocotb/: __init__.py  clock.py  dut.py  test.py  time.py  triggers.py
src/ttboard/config/: config_file.py  parser.py  user_config.py
src/ttboard/fpga/: fabricfox.py  fabricfoxv2.py  fpga_mux.py
test/: conftest.py  test_serialized_shuttle.py
(+38 files in other folders)
